// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFilteredQuery applies a range filter 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "range": Object {
          "@timestamp": Object {
            "gte": "now-15m",
            "lte": "now",
          },
        },
      },
    ],
  },
}
`;

exports[`getFilteredQuery applies generated must filters to filter list 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "term": Object {
          "monitor.id": "foo.bar",
        },
      },
      Object {
        "range": Object {
          "@timestamp": Object {
            "gte": "now-15m",
            "lte": "now",
          },
        },
      },
    ],
  },
}
`;
